--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@wdio/appium-service": "^8.0.13",
     "@wdio/local-runner": "^8.0.13",
     "@wdio/mocha-framework": "^8.0.13",
-    "@wdio/spec-reporter": "^8.0.13"
+    "@wdio/spec-reporter": "^8.0.13",
+    "chai": "^4.3.7"
   }
 }
